Now with the class "domvas" the user can create a img popout of their dom element
When the "domvas" class is added on any DOM element, just
double-clicking the element will appear a popout with the downloadable
img

--- a/demo/index.html
+++ b/demo/index.html
@@ -33,6 +33,17 @@
 				font-style: italic;
 			}
 
+			.clickMe {
+				background: #ea6153;
+				border: 5px solid #c0392b;
+				border-radius: 15px;
+				padding: 20px;
+				color: #ecf0f1;
+				font-size: 2rem;
+				text-align: center;
+				margin: 0 auto;
+			}
+
 		</style>
 </head>
 <body>
@@ -48,6 +59,8 @@
 			</div>
 
 			<canvas id="test" width="350" height="206"></canvas>
+
+			<div class="clickMe domvas">Just Double-Click Over Me!<br><small>And See What's Happend</small></div>
 
 		</div>
 
